# pdf-viewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  LICENSE  README.md  app.py  database.py  docker-compose.yml  pyproject.toml  requirements.txt  run.bat  run.sh
books/: .gitkeep
scripts/: maintenance.sh  setup.py
static/css/: style.css
static/js/: main.js
templates/: index.html  tags.html
