[project]
name = "book-viewer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "flask==2.3.3",
    "flask-sqlalchemy==3.1.1",
    "itsdangerous==2.1.2",
    "jinja2==3.1.2",
    "markupsafe==2.1.3",
    "sqlalchemy==2.0.23",
    "werkzeug==2.3.7",
]
